# libspaznet

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  TODO.md  thread_mode_report.md
.cache/clangd/index/: bench_thread_modes.cpp.A842E64BEAF40AE2.idx  binary_utils.cpp.93B42C6FFB61AF58.idx  binary_utils.hpp.4D8C17382D0AC110.idx  congestion.cpp.DFC19BB0641CD8FD.idx  congestion.hpp.1699D0416C1F6DE7.idx  connection.cpp.F958CBC2AE0D9B6E.idx  connection.hpp.7C34DEC534CE1CAF.idx  crypto.cpp.7178C6CA584FD1A4.idx  crypto.hpp.88D169EE242B8CFB.idx  (+99 more)
.github/workflows/: ci.yml  delete_old_workflow_run_reports.yml  freebsd-arm64.yml  freebsd-x64.yml  linux-arm64.yml  linux-x64.yml  macos-arm64.yml  macos-x64.yml  windows-vs2022.yml  windows-vs2026.yml
docs/: Doxyfile  api-status.md  concurrency-and-coroutines.md  coroutine-pitfalls.md  doxygen.md  http.md  integration.md  lambda_cautions.txt  migration.md  mutex-vs-atomics.md  performance.md  quic-http3.md  quic-profile-2026-05-29.md  quic-security.md  threading.md  websocket.md
example/: main.cpp
example/http/: CMakeLists.txt
example/http-websocket/: CMakeLists.txt
example/http-websocket/demo/: README.md  chat.cpp  echo.cpp
example/http-websocket/include/libspaznet/websocket/: dispatcher.hpp  handler.hpp  send.hpp
example/http-websocket/src/: dispatcher.cpp  handler.cpp
example/http-websocket/tests/integration/: test_websocket_server.cpp
example/http-websocket/tests/performance/: test_websocket_rfc6455_performance.cpp
example/http-websocket/tests/unit/: test_handler.cpp
example/http/demo/: README.md  hello.cpp  showcase.cpp
example/http/fuzz/: fuzz_chunked_body.cpp  fuzz_http_request.cpp
example/http/include/libspaznet/http/: dispatcher.hpp  handler.hpp
example/http/src/: dispatcher.cpp  handler.cpp
example/http/tests/integration/: test_concurrent_connections.cpp  test_http_server.cpp  test_rfc9112_compliance.cpp  test_tcp_server.cpp  test_thread_modes.cpp
example/http/tests/performance/: bench_thread_modes.cpp  test_concurrent_performance.cpp  test_latency.cpp  test_rfc9112_performance.cpp  test_throughput.cpp
example/http/tests/unit/: test_handler.cpp  test_parser.cpp
example/http2/: CMakeLists.txt
example/http2/demo/: README.md  hello.cpp  showcase.cpp
example/http2/fuzz/: fuzz_h2_frame.cpp  fuzz_hpack_decode.cpp
example/http2/include/libspaznet/http2/: dispatcher.hpp  handler.hpp
example/http2/src/: codec.cpp  dispatcher.cpp
example/http2/tests/integration/: test_rfc9113_compliance.cpp
example/http2/tests/performance/: test_rfc9113_performance.cpp
example/http2/tests/unit/: test_codec.cpp  test_parser.cpp
example/quic-http3/: CMakeLists.txt
example/quic-http3/fuzz/: fuzz_h3_frame.cpp  fuzz_huffman_decode.cpp  fuzz_qpack_decode.cpp  fuzz_quic_frame.cpp  fuzz_quic_long_header.cpp  fuzz_quic_transport_params.cpp  fuzz_quic_varint.cpp
example/quic-http3/include/libspaznet/http3/: h3frame.hpp  service.hpp
example/quic-http3/include/libspaznet/quic/: congestion.hpp  connection.hpp  crypto.hpp  frame.hpp  listener.hpp  recovery.hpp  stream.hpp  tls.hpp
example/quic-http3/src/http3/: qpack.cpp  server.cpp  service.cpp
example/quic-http3/src/quic/: congestion.cpp  connection.cpp  crypto.cpp  frame.cpp  listener.cpp  packet.cpp  pn_space.cpp  stream.cpp  tls.cpp  transport_params.cpp  varint.cpp
example/quic-http3/tests/integration/: test_curl_http3_interop.cpp
example/quic-http3/tests/performance/: bench_quic_steady_state.cpp
example/quic-http3/tests/unit/: test_http3_end_to_end.cpp  test_http3_frame.cpp  test_http3_huffman.cpp  test_http3_qpack.cpp  test_quic_connection.cpp  test_quic_frame.cpp  test_quic_listener.cpp  test_quic_phase1.cpp  test_quic_phase4.cpp  test_quic_tls.cpp
example/udp/: CMakeLists.txt
example/udp/demo/: README.md  echo.cpp  relay.cpp  statsd.cpp
example/udp/include/libspaznet/udp/: dispatcher.hpp  handler.hpp
example/udp/src/: dispatcher.cpp  handler.cpp
example/udp/tests/integration/: test_udp_server.cpp
include/libspaznet/: http2_handler.hpp  http_handler.hpp  io_context.hpp  logger.hpp  platform_io.hpp  server.hpp  udp_handler.hpp  websocket_handler.hpp
src/: http2_handler.cpp  http_handler.cpp  io_context.cpp  platform_io.cpp  platform_io_epoll.cpp  platform_io_iocp.cpp  platform_io_kqueue.cpp  platform_io_poll.cpp  server.cpp  server_impl.cpp  udp_handler.cpp  websocket_handler.cpp
src/codec/: huffman.cpp
src/handlers/: http2_handler.cpp  http3_handler.cpp  http_handler.cpp  quic_handler.cpp  quic_server.cpp  udp_handler.cpp  websocket_handler.cpp
src/http3/: h3frame.cpp  huffman.cpp  qpack.cpp
src/platform/: io_context.cpp  platform_io.cpp  platform_io_epoll.cpp  platform_io_iocp.cpp  platform_io_kqueue.cpp  platform_io_poll.cpp
src/quic/: connection.cpp  crypto.cpp  frame.cpp  listener.cpp  pn_space.cpp  recovery.cpp  stream.cpp
src/utils/: binary_utils.cpp  header_utils.cpp  number_utils.cpp  string_utils.cpp
tests/: README.md  perf_budget.hpp  test_main.cpp
tests/integration/: test_concurrent_connections.cpp  test_http3_server.cpp  test_http_server.cpp  test_quic_server.cpp  test_rfc9112_compliance.cpp  test_rfc9113_compliance.cpp  test_tcp_server.cpp  test_thread_modes.cpp  test_udp_server.cpp  test_websocket_server.cpp
tests/performance/: README.md  bench_quic_steady_state.cpp  bench_thread_modes.cpp  run_iperf_benchmark.sh  test_concurrent_performance.cpp  test_iperf_integration.cpp  test_latency.cpp  test_quic_performance.cpp  test_rfc9112_performance.cpp  test_rfc9113_performance.cpp  test_throughput.cpp  test_websocket_rfc6455_performance.cpp
tests/unit/: test_http2_handler.cpp  test_http3_huffman.cpp  test_http_handler.cpp  test_io_context.cpp  test_logger.cpp  test_number_utils.cpp  test_platform_io.cpp  test_quic_connection.cpp  test_quic_handler.cpp  test_quic_listener.cpp  test_quic_phase1.cpp  test_quic_tls.cpp  test_rfc9112_parser.cpp  test_rfc9113_parser.cpp  test_task_queue.cpp  test_timer.cpp  test_websocket_handler.cpp
(+25 files in other folders)
